--- a/Calcolatrice A-S-L/Properties/Resources.resx
+++ b/Calcolatrice A-S-L/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="righe1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\righe1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="calc2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calc2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ico_calc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ico_calc.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -181,6 +184,9 @@
   <data name="papiro1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\papiro1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="graphicCalculator1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\graphicCalculator1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="impostazioni" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\impostazioni.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -199,7 +205,7 @@
   <data name="calc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\calc.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="calc2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\calc2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="graphicCalculator11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\graphicCalculator11.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
